--- a/Real_Estate_Price_Prediction(Bengaluru).ipynb
+++ b/Real_Estate_Price_Prediction(Bengaluru).ipynb
@@ -6252,7 +6252,7 @@
    "id": "ea81707d-74c9-4bc1-895e-1993049eab5c",
    "metadata": {},
    "source": [
-    "The mean of predicted prices is quite colse to the mean of actual prices. The model has sufficient accuracy. The model has able to capture most variability withtin the dataset as showed by the approximately equal standard deviations of predicted and actual prices. Though the minimum difference is notable and maximum difference between predicted and actual prices is much higher. This shows the model falters to predict high price range."
+    "The mean of predicted prices is quite close to the mean of actual prices. The model has sufficient accuracy. The model has able to capture most variability withtin the dataset as showed by the approximately equal standard deviations of predicted and actual prices. Though the minimum difference is notable and maximum difference between predicted and actual prices is much higher. This shows the model falters to predict high price range."
    ]
   },
   {
